--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = myauth
-version = 0.0.3
-description = A Django app to conduct web-based polls.
+version = 0.0.4
+description = A Django app to handle authentication.
 long_description = file: README.md
 author = Immanuel Njuguna
 author_email = njugunaimmanuel1@outlook.com
@@ -9,9 +9,9 @@ license = MIT  # Example license
 classifiers =
     Environment :: Web Environment
     Framework :: Django
-    Framework :: Django :: 4.2  # Replace "X.Y" as appropriate
+    Framework :: Django :: 5.0  # Replace "X.Y" as appropriate
     Intended Audience :: Developers
-    License :: OSI Approved :: BSD License
+    License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3
@@ -26,25 +26,15 @@ include_package_data = true
 packages = find:
 python_requires = >=3.8
 install_requires =
-    asgiref >= 3.6.0
-    certifi >= 2022.12.7
-    cffi >= 1.15.1
-    charset-normalizer >= 3.1.0
-    cryptography >= 40.0.2
-    Deprecated >= 1.2.13
-    Django >= 4.2
-    django-cleanup >= 7.0.0
-    django-cors-headers >= 3.14.0
-    django-environ >= 0.10.0
-    djangorestframework >= 3.14.0
-    djangorestframework-simplejwt >= 5.2.2
-    idna >= 3.4
-    jwcrypto >= 1.4.2
-    pycparser >= 2.21
-    PyJWT >= 2.6.0
-    pytz >= 2023.3
-    requests >= 2.30.0
-    sqlparse >= 0.4.4
-    tzdata >= 2023.3
-    urllib3 >= 2.0.2
-    wrapt >= 1.15.0
+    asgiref>=3.8.1
+    cffi>=1.16.0
+    cryptography>=42.0.5
+    cyber @ git+https://github.com/Immanuel-supanova/Cyber.git@81e421316539155f6646f1a654f62c737113cd8f
+    Django>=5.0.4
+    django-cors-headers>=4.3.1
+    djangorestframework>=3.15.1
+    djangorestframework-simplejwt>=5.3.1
+    pycparser>=2.22
+    PyJWT>=2.8.0
+    sqlparse>=0.5.0
+    tzdata>=2024.1
